--- a/keynotes/giancarlo-fortino/index.html
+++ b/keynotes/giancarlo-fortino/index.html
@@ -70,7 +70,9 @@ title: Keynotes - Dr. Giancarlo Fortino
     </div>
     <hr />
     <div class="row">
-      <div class="col-3 mb-3 mb-sm-0 d-flex flex-row gap-4">
+      <div
+        class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
+      >
         <div class="text-center">
           <img
             src="/assets/images/metaverse/g.jpg"
@@ -81,7 +83,7 @@ title: Keynotes - Dr. Giancarlo Fortino
           <h6><i>The University of Calabria, Italy</i></h6>
         </div>
       </div>
-      <div class="col-9">
+      <div class="col-md-9 col-sm-8">
         <h3>Biography</h3>
         <p>
           Giancarlo Fortino (IEEE Fellow 2022) is Full Professor of Computer
