--- a/keynotes/runhe-huang/index.html
+++ b/keynotes/runhe-huang/index.html
@@ -61,7 +61,9 @@ title: Keynotes - Dr. Runhe Huang
     </div>
     <hr />
     <div class="row">
-      <div class="col-3 mb-3 mb-sm-0 d-flex flex-row gap-4">
+      <div
+        class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
+      >
         <div class="text-center">
           <img
             src="/assets/images/Dr_Runhe_Huang.png"
@@ -72,7 +74,7 @@ title: Keynotes - Dr. Runhe Huang
           <h6><i>Hosei University, Japan</i></h6>
         </div>
       </div>
-      <div class="col-9">
+      <div class="col-md-9 col-sm-8">
         <h4>Biography</h4>
         <p>
           Runhe Huang received her B.Sc. in Electronics Technology from the
