--- a/cfp/index.html
+++ b/cfp/index.html
@@ -10,12 +10,12 @@ title: IEEE SWC 2025 Call for Papers
     background-image: url('/assets/images/jack-carter-_oYcF7p42xM-unsplash.jpg');
     background-size: cover;
     background-position: center 65%;
-    height: 70vh;
+    min-height: 70vh;
     position: relative;
     color: white;
   "
 >
-  <div class="hero-section">
+  <div class="hero-section" style="min-height: 70vh">
     <div
       class="page-section container px-5 pt-5 d-flex flex-column align-items-center gap-3"
     >
