--- a/forums/index.html
+++ b/forums/index.html
@@ -10,12 +10,12 @@ title: Forums
     background-image: url('/assets/images/kyler-nixon-_ZBekGTBh-c-unsplash.jpg');
     background-size: cover;
     background-position: 50% 60%;
-    height: 60vh;
+    min-height: 60vh;
     position: relative;
     color: white;
   "
 >
-  <div class="hero-section">
+  <div class="hero-section" style="min-height: 60vh">
     <div
       class="page-section container px-5 pt-5 d-flex flex-column align-items-center gap-3"
     >
