--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@ title: Home
     background-image: url('/assets/images/ahmed-zalabany-yTElJrzPHZo-unsplash.jpg');
     background-size: cover;
     background-position: center;
-    height: 90vh;
+    min-height: 90vh;
     position: relative;
     color: white;
   "
 >
-  <div class="hero-section">
+  <div class="hero-section" style="min-height: 90vh !important">
     <div
       class="page-section container px-5 pt-5 d-flex flex-column align-items-center gap-3"
     >
