--- a/keynotes/runhe-huang/index.html
+++ b/keynotes/runhe-huang/index.html
@@ -10,7 +10,7 @@ title: Keynotes - Dr. Runhe Huang
     background-image: url('/assets/images/huang_keynote_edge_sensing.png');
     background-size: cover;
     background-position: 50% 25%;
-    height: 60vh;
+    min-height: 60vh;
     position: relative;
     color: white;
   "
