--- a/travel/banff-group-trip/index.html
+++ b/travel/banff-group-trip/index.html
@@ -10,7 +10,7 @@ title: Banff Group Trip
     background-image: url('/assets/images/john-lee-oMneOBYhJxY-unsplash.jpg');
     background-size: cover;
     background-position: 50% 3%;
-    height: 60vh;
+    min-height: 60vh;
     position: relative;
     color: white;
   "
