--- a/travel/ieee-cis-travel-grants/index.html
+++ b/travel/ieee-cis-travel-grants/index.html
@@ -10,7 +10,7 @@ title: IEEE Travel Grant
     background-image: url('/assets/images/javier-sepulveda-pascual-gEAqV5hfI_k-unsplash.jpg');
     background-size: cover;
     background-position: 50% 75%;
-    height: 60vh;
+    min-height: 60vh;
     position: relative;
     color: white;
   "
