--- a/venue/calgary/index.html
+++ b/venue/calgary/index.html
@@ -10,7 +10,7 @@ title: Venue - Calgary
     background-image: url('/assets/images/jack-carter-_oYcF7p42xM-unsplash.jpg');
     background-size: cover;
     background-position: center;
-    height: 60vh;
+    min-height: 60vh;
     position: relative;
     color: white;
   "
