--- a/contact/index.html
+++ b/contact/index.html
@@ -10,12 +10,12 @@ title: Contact
     background-image: url('/assets/images/Digital_Twin_Calgary.jpg');
     background-size: cover;
     background-position: center;
-    height: 60vh;
+    min-height: 60vh;
     position: relative;
     color: white;
   "
 >
-  <div class="hero-section">
+  <div class="hero-section" style="min-height: 60vh">
     <div
       class="page-section container px-5 pt-5 d-flex flex-column align-items-center gap-3"
     >
