--- a/keynotes/giancarlo-fortino/index.html
+++ b/keynotes/giancarlo-fortino/index.html
@@ -10,12 +10,12 @@ title: Keynotes - Dr. Giancarlo Fortino
     background-image: url('/assets/images/fortino_keynote_digital_twins_gen_ai.png');
     background-size: cover;
     background-position: 50% 0%;
-    height: 60vh;
+    min-height: 60vh;
     position: relative;
     color: white;
   "
 >
-  <div class="hero-section">
+  <div class="hero-section" style="min-height: 60vh">
     <div
       class="page-section container px-5 pt-5 d-flex flex-column align-items-center gap-3"
     >
