--- a/program/index.html
+++ b/program/index.html
@@ -10,7 +10,7 @@ title: Program
     background-image: url('/assets/images//product-school-nOvIa_x_tfo-unsplash.jpg');
     background-size: cover;
     background-position: center;
-    height: 60vh;
+    min-height: 60vh;
     position: relative;
     color: white;
   "
