--- a/scalcom/index.html
+++ b/scalcom/index.html
@@ -10,7 +10,7 @@ title: IEEE ScalCom 2025
     background-image: url('/assets/images/daven-froberg-pQqqbdwg6n4-unsplash.jpg');
     background-size: cover;
     background-position: center 65%;
-    height: 60vh;
+    min-height: 60vh;
     position: relative;
     color: white;
   "
