--- a/uic/index.html
+++ b/uic/index.html
@@ -10,7 +10,7 @@ title: IEEE UIC 2025
     background-image: url('/assets/images/jack-carter-_oYcF7p42xM-unsplash.jpg');
     background-size: cover;
     background-position: center 65%;
-    height: 60vh;
+    min-height: 60vh;
     position: relative;
     color: white;
   "
