--- a/venue/telus-convention-center/index.html
+++ b/venue/telus-convention-center/index.html
@@ -10,7 +10,7 @@ title: Venue - Telus Convention Center
     background-image: url('/assets/images/telus-convention-center.jpg');
     background-size: cover;
     background-position: center;
-    height: 60vh;
+    min-height: 60vh;
     position: relative;
     color: white;
   "
