--- a/workshops/fusion/index.html
+++ b/workshops/fusion/index.html
@@ -10,7 +10,7 @@ title: FUSION Workshop 2025
     background-image: url('/assets/images/Digital_Twin_Calgary.jpg');
     background-size: cover;
     background-position: center;
-    height: 60vh;
+    min-height: 60vh;
     position: relative;
     color: white;
   "
