--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ title: Home
         />
         <h5>Dr. C. Ashiq Rahman</h5>
         <h6><i>City of Calgary, Canada</i></h6>
-        <p>Industry Liaison Chair</p>
+        <p>Co Industry Liaison Chair</p>
       </div>
       <div class="col-md-4 col-sm-6">
         <img
@@ -285,6 +285,18 @@ title: Home
           alt="DR Hong Lin"
           class="circle-img mb-3"
         />
+
+        <h5>Dr. Ali Dewan</h5>
+        <h6><i>Athabasca University, Canada</i></h6>
+        <p>Co Industry Liaison Chair</p>
+      </div>
+      <div class="col-md-4 col-sm-6">
+        <img
+          src="/assets/images/ali.jpg"
+          alt="DR Hong Lin"
+          class="circle-img mb-3"
+        />
+        
         <h5>Dr Hong Lin</h5>
         <h6><i>University of Houston-downtwon , USA</i></h6>
         <p>Tutorial Chair</p>
