--- a/index.html
+++ b/index.html
@@ -167,8 +167,23 @@ title: Home
         />
         <h5>Dr. Reza Malekian</h5>
         <h6><i>Malmö University, Sweden</i></h6>
-        <p>Program Chair</p>
+        <p>Co-Program Chair</p>
       </div>
+
+      <div class="col-md-4 col-sm-6">
+        <img
+          src="/assets/images/singh.jpg"
+          alt="Dr. Oscar Lin"
+          class="circle-img mb-3"
+        />
+        <h5>Dr. Dhananjay Singh</h5>
+        <h6><i>Penn State University, USA</i></h6>
+        <p>Co-Program Chair</p>
+      </div>
+      
+
+
+      
       <div class="col-md-4 col-sm-6">
         <img
           src="/assets/images/man.jpeg"
