--- a/atc/index.html
+++ b/atc/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: IEEE UIC 2025
+title: IEEE ATC 2025
 ---
 
 <!-- Hero Section -->
@@ -154,6 +154,10 @@ title: IEEE UIC 2025
                 Zhen Tian <br />
                 Guangdong Laboratory of Artificial Intelligence and Digital
                 Economy, China
+              </h5>
+              <h5 class="fs-6">
+                Sin-Chi Kuok <br />
+                University of Macau, Macao, China
               </h5>
             </div>
           </div>
