--- a/workshops/next-gen-networking/index.html
+++ b/workshops/next-gen-networking/index.html
@@ -44,7 +44,8 @@ title: Next Generation Networking Workshop 2025
           <h4 class="fs-5 fw-bold">Important Dates</h4>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Submission Deadline</h5>
-          <h6 class="">April 30, 2025</h6>
+          <h6 class="text-decoration-line-through">April 30, 2025</h6>
+          <h6 class="">May 20, 2025</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Authors Notification</h5>
           <h6 class="">June 15, 2025</h6>
