Updated WSW forum

--- a/forums/women-in-the-smart-world/index.html
+++ b/forums/women-in-the-smart-world/index.html
@@ -126,7 +126,7 @@ title: Women in the Smart World Forum 2025
                 Japan Advanced Institute of Science and Technology, Japan
               </h5>
               <h5 class="fs-6">
-                Tatiana Cardon <br />
+                Tatiana Cardona <br />
                 Saint Louis University, USA
               </h5>
               <h5 class="fs-6">
