Added tutorials and industry day

--- a/contact/index.html
+++ b/contact/index.html
@@ -44,7 +44,7 @@ title: Contact
         <li class="mb-2">
           For questions about <strong>Web pages</strong>: Raymond Morland &lt;<a
             href="mailto:rmorland@athabascau.ca"
-            >rmorland1@learn.athabascau.ca</a
+            >rmorland@athabascau.ca</a
           >&gt;
         </li>
         <li class="mb-2">
