--- a/program/index.html
+++ b/program/index.html
@@ -59,7 +59,17 @@ title: Program
               <div class="card-body">
                 <h5>Day 2</h5>
                 <h3>Industry Day</h3>
-                <p class="fs-5">Information Coming Soon</p>
+                <p>
+                  Join us for Industry Day, a full-day event highlighting
+                  real-world applications and strategic innovations in smart
+                  technologies across sectors. The program brings together
+                  executives, industry leaders, and emerging voices to explore
+                  how AI, IoT, digital twins, quantum computing, and AR/VR are
+                  shaping the future of smart communities.
+                </p>
+                <a href="industry-day/" class="btn btn-primary mt-2"
+                  >Learn More</a
+                >
               </div>
             </div>
           </div>
