Updated KG tutorial

--- a/tutorials/advances-in-knowledge-graph-computation-in-the-era-of-gen-ai/index.html
+++ b/tutorials/advances-in-knowledge-graph-computation-in-the-era-of-gen-ai/index.html
@@ -96,8 +96,6 @@ title: Tutorials - Advances in Knowledge Graph Computation in the Era of Generat
                 <ol type="i">
                   <li>Explicit KGs (deductive KGs)</li>
                   <li>Implicit KGs (inductive KGs)</li>
-                  <li>Actional knowledge graphs</li>
-                  <li>Temporal knowledge graphs</li>
                 </ol>
               </li>
               <li>KGs completion</li>
@@ -168,26 +166,45 @@ title: Tutorials - Advances in Knowledge Graph Computation in the Era of Generat
         </ol>
       </div>
     </div>
-    <!-- <hr />
+    <hr />
     <div class="row">
       <div
         class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
       >
         <div class="text-center">
           <img
-            src=""
+            src="/assets/images/Xiaokun_Zhang.jpg"
             alt="Dr. Xiaokun Zhang"
             class="circle-img mb-3"
           />
           <h5>Dr. Xiaokun Zhang</h5>
           <h6><i>Athabasca University, Canada</i></h6>
+          <a href="mailto:xiaokunz@athabascau.ca">xiaokunz@athabascau.ca</a>
         </div>
       </div>
       <div class="col-md-9 col-sm-8">
         <h3>Biography</h3>
-        <p></p>
+        <p>
+          Dr. Xiaokun Zhang is an associate professor in School of Computing and
+          Information Systems in Athabasca University in Canada. He earned his
+          PhD in engineering on research in computer integrated manufacturing
+          engineering from Northwestern Polytechnic University in China in 1995.
+          He was Nortel research fellow and post-doctoral fellow from 1998 until
+          2001 in University of Calgary and visiting professor in University of
+          Iowa in US in 1997. His recent research and teaching areas primarily
+          focus on the system analysis and dynamic modeling in heterogeneous
+          cyber-physical-social interaction, and semantic computing enhanced
+          cognitive computing and data analytics towards decentralized real-time
+          control and monitoring systems, environmental and engineering
+          computing systems, and smart eLearning systems. He serves IEEE SMC
+          (Systems, Man, & Cybernetics Society) technical committee on
+          computer-supported cooperative work in design, and program committees
+          in various annual conferences in computing and information systems. He
+          supervised post-doctoral fellow, graduate students' essay, projects,
+          and thesis
+        </p>
       </div>
-    </div> -->
+    </div>
   </div>
 </section>
 
