Update Industry Day program

--- a/program/industry-day/index.html
+++ b/program/industry-day/index.html
@@ -54,14 +54,6 @@ title: Industry Day
           </div>
           <div class="col-9"><p>Registration Starts</p></div>
         </div>
-        <div class="row fs-4">
-          <div class="col-3">
-            <p class="">8:00am - 9:00am</p>
-          </div>
-          <div class="col-9">
-            <p>Networking breakfast (guest speakers and invited attendees)</p>
-          </div>
-        </div>
         <hr />
         <h3 class="mb-4">Morning Sessions</h3>
         <div class="row fs-4">
@@ -98,7 +90,7 @@ title: Industry Day
         </div>
         <div class="row fs-4">
           <div class="col-3">
-            <p class="">11:00pm - 11:45pm</p>
+            <p class="">11:00pm - 11:50pm</p>
           </div>
           <div class="col-9">
             <p>Industrial Internet of Things (IoT) for smart communities</p>
@@ -111,7 +103,7 @@ title: Industry Day
         </div>
         <div class="row fs-4">
           <div class="col-3">
-            <p class="">11:00am - 11:45am</p>
+            <p class="">11:00am - 11:50am</p>
           </div>
           <div class="col-9">
             <p>Smart cities and the WAVE Tech Centre</p>
@@ -145,7 +137,7 @@ title: Industry Day
         <h3 class="mb-4">Afternoon Sessions</h3>
         <div class="row fs-4">
           <div class="col-3">
-            <p class="">1:00pm - 2:00pm</p>
+            <p class="">1:00pm - 2:15pm</p>
           </div>
           <div class="col-9">
             <p>Building a strong innovation ecosystem</p>
@@ -158,16 +150,16 @@ title: Industry Day
         </div>
         <div class="row fs-4">
           <div class="col-3">
-            <p class="">2:00pm - 2:15pm</p>
+            <p class="">2:15pm - 2:30pm</p>
           </div>
           <div class="col-9"><p>Coffee Break</p></div>
         </div>
         <div class="row fs-4">
           <div class="col-3">
-            <p class="">2:15pm - 3:30pm</p>
+            <p class="">2:30pm - 3:30pm</p>
           </div>
           <div class="col-9">
-            <p>Digital twins, AR/VR, and drone presentations</p>
+            <p>Digital twins, AR/VR, and Drone Presentations</p>
             <p class="fs-5">
               Industry experts will share their innovative approaches to
               adopting digital twins, AR/VR/XR, and drone - highlighted through
@@ -177,7 +169,7 @@ title: Industry Day
         </div>
         <div class="row fs-4">
           <div class="col-3">
-            <p class="">3:00pm - 3:45pm</p>
+            <p class="">3:30pm - 4:30pm</p>
           </div>
           <div class="col-9">
             <p>Quantum computing panel discussions and presentations</p>
@@ -206,12 +198,6 @@ title: Industry Day
           <div class="col-9">
             <p>Adjourn</p>
           </div>
-        </div>
-        <div class="row fs-4">
-          <div class="col-3">
-            <p class="">6:00pm - 9:00pm</p>
-          </div>
-          <div class="col-9"><p>VIP dinner</p></div>
         </div>
       </div>
     </div>
