Update Industry Day program

--- a/program/industry-day/index.html
+++ b/program/industry-day/index.html
@@ -48,7 +48,7 @@ title: Industry Day
       <hr />
       <div class="col-sm-12 d-flex flex-column gap-2">
         <h3 class="mb-4">Agenda (8:00am to 4:30pm)</h3>
-        <div class="row fs-4">
+        <div class="row fs-4 gap-2">
           <div class="col-3">
             <p class="">8:00am</p>
           </div>
@@ -56,7 +56,7 @@ title: Industry Day
         </div>
         <hr />
         <h3 class="mb-4">Morning Sessions</h3>
-        <div class="row fs-4">
+        <div class="row fs-4 gap-2">
           <div class="col-3">
             <p class="">9:00am - 9:30am</p>
           </div>
@@ -69,7 +69,7 @@ title: Industry Day
             </p>
           </div>
         </div>
-        <div class="row fs-4">
+        <div class="row fs-4 gap-2">
           <div class="col-3">
             <p class="">9:30am - 10:45am</p>
           </div>
@@ -82,15 +82,15 @@ title: Industry Day
             </p>
           </div>
         </div>
-        <div class="row fs-4">
+        <div class="row fs-4 gap-2">
           <div class="col-3">
-            <p class="">10:45pm - 11:00am</p>
+            <p class="">10:45am - 11:00am</p>
           </div>
           <div class="col-9"><p>Coffee Break</p></div>
         </div>
-        <div class="row fs-4">
+        <div class="row fs-4 gap-2">
           <div class="col-3">
-            <p class="">11:00pm - 11:50pm</p>
+            <p class="">11:00am - 11:50am</p>
           </div>
           <div class="col-9">
             <p>Industrial Internet of Things (IoT) for smart communities</p>
@@ -101,7 +101,7 @@ title: Industry Day
             </p>
           </div>
         </div>
-        <div class="row fs-4">
+        <div class="row fs-4 gap-2">
           <div class="col-3">
             <p class="">11:00am - 11:50am</p>
           </div>
@@ -115,13 +115,13 @@ title: Industry Day
         </div>
         <hr />
         <h3 class="mb-4">Noon Session</h3>
-        <div class="row fs-4">
+        <div class="row fs-4 gap-2">
           <div class="col-3">
             <p class="">11:50am - 12:50pm</p>
           </div>
           <div class="col-9"><p>Lunch</p></div>
         </div>
-        <div class="row fs-4">
+        <div class="row fs-4 gap-2">
           <div class="col-3">
             <p class="">12:00pm - 12:50pm</p>
           </div>
@@ -135,7 +135,7 @@ title: Industry Day
         </div>
         <hr />
         <h3 class="mb-4">Afternoon Sessions</h3>
-        <div class="row fs-4">
+        <div class="row fs-4 gap-2">
           <div class="col-3">
             <p class="">1:00pm - 2:15pm</p>
           </div>
@@ -148,13 +148,13 @@ title: Industry Day
             </p>
           </div>
         </div>
-        <div class="row fs-4">
+        <div class="row fs-4 gap-2">
           <div class="col-3">
             <p class="">2:15pm - 2:30pm</p>
           </div>
           <div class="col-9"><p>Coffee Break</p></div>
         </div>
-        <div class="row fs-4">
+        <div class="row fs-4 gap-2">
           <div class="col-3">
             <p class="">2:30pm - 3:30pm</p>
           </div>
@@ -167,7 +167,7 @@ title: Industry Day
             </p>
           </div>
         </div>
-        <div class="row fs-4">
+        <div class="row fs-4 gap-2">
           <div class="col-3">
             <p class="">3:30pm - 4:30pm</p>
           </div>
@@ -179,7 +179,7 @@ title: Industry Day
             </p>
           </div>
         </div>
-        <div class="row fs-4">
+        <div class="row fs-4 gap-2">
           <div class="col-3">
             <p class="">3:50pm - 4:30pm</p>
           </div>
@@ -191,7 +191,7 @@ title: Industry Day
             </p>
           </div>
         </div>
-        <div class="row fs-4">
+        <div class="row fs-4 gap-2">
           <div class="col-3">
             <p class="">4:30pm</p>
           </div>
