Updated Industry Day

--- a/program/industry-day/index.html
+++ b/program/industry-day/index.html
@@ -32,18 +32,23 @@ title: Industry Day
   <div class="row g-5">
     <div class="col-sm-12 d-flex flex-column gap-4">
       <h2 class="fs-2">
-        Join us at the 2025 IEEE Smart World Congress Industry Day at the Wave
-        Tech Center
+        Join us at the 2025 IEEE Smart World Congress Industry Day, where
+        thought leaders, innovators, and economic development experts come
+        together to shape the future.
       </h2>
       <p class="fs-5">
         Location:
+        <a href="https://calgary-convention.com/" target="_blank"
+          >Telus Convention Center, Calgary (136 8 Ave SE, Calgary, AB T2P
+          0K6)</a
+        ><br /><br />Note: Registered conference attendees will have the
+        opportunity to tour The City of Calgary WAVE Technology Center on the
+        Industry Day (by appointments only) 
         <a
           href="https://www.calgary.ca/major-projects/smart-city/tech-centre.html"
           target="_blank"
-          >Wave Tech Centre</a
-        ><br /><br />Note: Registered conference attendees will have the
-        opportunity to tour The City of Calgary WAVE Tech Centre on the Industry
-        Day (by appointments only)
+          >The City of Calgary Wave Tech Centre</a
+        >
       </p>
       <hr />
       <div class="col-sm-12 d-flex flex-column gap-2">
