--- a/workshops/next-gen-networking/index.html
+++ b/workshops/next-gen-networking/index.html
@@ -45,13 +45,14 @@ title: Next Generation Networking Workshop 2025
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Submission Deadline</h5>
           <h6 class="text-decoration-line-through">April 30, 2025</h6>
-          <h6 class="">May 20, 2025</h6>
+          <h6 class="text-decoration-line-through">May 20, 2025</h6>
+          <h6 class="">June 15, 2025 (Firm)</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Authors Notification</h5>
-          <h6 class="">June 15, 2025</h6>
+          <h6 class="">July 15, 2025</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Camera-Ready Submission</h5>
-          <h6 class="">July 15, 2025</h6>
+          <h6 class="">August 1, 2025</h6>
         </div>
       </div>
       <div class="card bg-light-subtle">
