--- a/workshops/sega/index.html
+++ b/workshops/sega/index.html
@@ -258,11 +258,15 @@ title: SEGA Workshop 2025
                 Nicholas Vincent <br />Simon Fraser University, Canada<br />
               </h5>
               <h5 class="fs-6">
+                Vlad Voytenko <br />Athabasca University, Canada<br />
+              </h5>
+              <h5 class="fs-6">
                 Johan Woodworth<br />Mount Saint Vincent University, Canada<br />
               </h5>
               <h5 class="fs-6">
                 Shuo Xu<br />Beijing University of Technology, China<br />
               </h5>
+               
               <h5 class="fs-6">
                 Xiaokun Zhang<br />Athabasca University, Canada<br />
               </h5>
