--- a/workshops/fusion/index.html
+++ b/workshops/fusion/index.html
@@ -46,12 +46,17 @@ title: FUSION Workshop 2025
           <h5 class="fs-6 fw-bold text-center m-0">
             Deadline of Abstract and Full Paper Submission
           </h5>
-          <h6 class="">May 16, 2025</h6>
+          <h6 class="">
+            <s>May 16, 2025</s><span style="color: red"> June 10, 2025</span>
+          </h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">
             Authors Notification and Start of Early Bird Registration
           </h5>
           <h6 class="">May 31, 2025</h6>
+          <h6 class="">
+            <s>May 31, 2025</s><span style="color: red"> June 20, 2025</span>
+          </h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">
             Submission Deadline of Camera-Ready Papers
