--- a/workshops/iaiddt/index.html
+++ b/workshops/iaiddt/index.html
@@ -44,10 +44,14 @@ title: IAIDDT Workshop 2025
           <h4 class="fs-5 fw-bold">Important Dates</h4>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Paper Submission Deadline</h5>
-          <h6 class="">May 15, 2025</h6>
+          <h6 class="">
+            <h6 class="">
+              <s>May 15, 2025</s><span style="color: red"> May 31, 2025</span>
+            </h6>
+          </h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Acceptance Notification</h5>
-          <h6 class="">May 30, 2025</h6>
+          <h6 class="">June 14, 2025</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Workshop Duration</h5>
           <h6 class="">Half-day</h6>
