--- a/index.html
+++ b/index.html
@@ -282,6 +282,22 @@ title: Home
         <p>Local Chair</p>
       </div>
 
+     <div class="col-md-4 col-sm-6">
+        <img
+          src="/assets/images/yuemin.jpg"
+          alt="Dr.  "
+          class="circle-img mb-3"
+        />
+        <h5>Dr. Yuemin Ding</h5>
+        <h6><i>University of Navarra, Spain</i></h6>
+        <p>Track Chair</p>
+      </div>
+
+
+
+
+      
+      
       <div class="col-md-4 col-sm-6">
         <img
           src="/assets/images/ashiq.jpg"
