--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ title: Home
           <h6 class="text-decoration-line-through">April 14, 2025</h6>
           <h6 class="">{{site.data.swc_data.dates.paperSubmission}}</h6>
           <hr class="w-100" />
-          <h5 class="fs-6 fw-bold text-center">Authors Notification</h5>
+          <h5 class="fs-6 fw-bold text-center">Authors Notification (A delay of approximately one week caused by the high volume of paper submissions.)</h5>
           <h6 class="">{{site.data.swc_data.dates.authorsNotification}}</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Demo/Poster/WiP Paper Due</h5>
