--- a/program/index.html
+++ b/program/index.html
@@ -58,7 +58,7 @@ title: Program
             <div class="card bg-light-subtle">
               <div class="card-body">
                 <h5>Day 2</h5>
-                <h3>Industry Day</h3>
+                <h3>Industry Day and Reception </h3>
                 <p>
                   Join us for Industry Day, a full-day event highlighting
                   real-world applications and strategic innovations in smart
@@ -66,6 +66,7 @@ title: Program
                   executives, industry leaders, and emerging voices to explore
                   how AI, IoT, digital twins, quantum computing, and AR/VR are
                   shaping the future of smart communities.
+                  The reception will be held at dusk. All are welcome.
                 </p>
                 <a href="industry-day/" class="btn btn-primary mt-2"
                   >Learn More</a
@@ -83,7 +84,7 @@ title: Program
             <div class="card bg-light-subtle">
               <div class="card-body">
                 <h5>Day 3</h5>
-                <h3>Presentations</h3>
+                <h3>Openning Ceremony, Keynote, Pannel, and Conference/Workshop/Special Session Paper Presentations</h3>
                 <p class="fs-5">Information Coming Soon</p>
               </div>
             </div>
@@ -98,7 +99,8 @@ title: Program
             <div class="card bg-light-subtle">
               <div class="card-body">
                 <h5>Day 4</h5>
-                <h3>Presentations</h3>
+                <h3>Keynote, Pannel, and Conference/Workshop/Special Session Paper Presentations</h3>
+                <h3>Banquet and Award Announcement (evening, at Calgary Zoo)</h3>
                 <p class="fs-5">Information Coming Soon</p>
               </div>
             </div>
@@ -113,7 +115,8 @@ title: Program
             <div class="card bg-light-subtle">
               <div class="card-body">
                 <h5>Day 5</h5>
-                <h3>Presentations</h3>
+                <h3>Keynote, Pannel, and Conference/Workshop/Special Session Paper Presentations</h3>
+                <h3>Closing Ceremony</h3>
                 <p class="fs-5">Information Coming Soon</p>
               </div>
             </div>
