Added Practice of Using Language Models tutorial

--- a/tutorials/advances-in-knowledge-graph-computation-in-the-era-of-gen-ai/index.html
+++ b/tutorials/advances-in-knowledge-graph-computation-in-the-era-of-gen-ai/index.html
@@ -22,7 +22,7 @@ title: Tutorials - Advances in Knowledge Graph Computation in the Era of Generat
       <h1 class="display-5 fw-bolder mt-5">
         Advances in Knowledge Graph Computation in the Era of Generative AI
       </h1>
-      <h3>Presented by: Dr. Xiaokun Zhang, Athabasca Univeristy, Canada</h3>
+      <h3>Presented by: Dr. Xiaokun Zhang, Athabasca University, Canada</h3>
     </div>
   </div>
 </section>
