--- a/workshops/sega/index.html
+++ b/workshops/sega/index.html
@@ -23,6 +23,7 @@ title: SEGA Workshop 2025
         The 1st International Workshop on Smart Education in the Age of
         Generative AI (SEGA) 2025
       </h1>
+      <h3>August 21, 2025</h3>
       <a href="./CFP_SEGA_2025.pdf" target="_blank" class="btn btn-primary w-50"
         >Call For Papers</a
       >
@@ -42,7 +43,9 @@ title: SEGA Workshop 2025
           <h4 class="fs-5 fw-bold">Important Dates</h4>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Submission Deadline</h5>
-          <h6 class=""><s>May 10, 2025</s><span style="color:red;"> May 25, 2025</span></h6>
+          <h6 class="">
+            <s>May 10, 2025</s><span style="color: red"> May 25, 2025</span>
+          </h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Acceptance Notification</h5>
           <h6 class="">June 15, 2025</h6>
@@ -266,7 +269,7 @@ title: SEGA Workshop 2025
               <h5 class="fs-6">
                 Shuo Xu<br />Beijing University of Technology, China<br />
               </h5>
-               
+
               <h5 class="fs-6">
                 Xiaokun Zhang<br />Athabasca University, Canada<br />
               </h5>
@@ -354,8 +357,14 @@ title: SEGA Workshop 2025
           </p>
           <ul>
             <li>No appendix is allowed</li>
-            <li>Each reference must specify all authors up to including 6, then use et al. beyond 6.</li>
-            <li>Submissions should include the title, author(s), affiliation(s), e-mail address(es), and institution information in the first page</li>
+            <li>
+              Each reference must specify all authors up to including 6, then
+              use et al. beyond 6.
+            </li>
+            <li>
+              Submissions should include the title, author(s), affiliation(s),
+              e-mail address(es), and institution information in the first page
+            </li>
             <li>Paper size: US Letter 8.5in x 11in</li>
             <li>Ensure that the figures and tables are legible</li>
           </ul>
