Work on registration alerts and links. Work on footer.

--- a/cfp/index.html
+++ b/cfp/index.html
@@ -31,7 +31,7 @@ title: IEEE SWC 2025 Call for Papers
         <h3 class="">{{site.data.swc_data.dates.conferenceDates}}</h3>
       </div>
       <div>
-        <a class="btn btn-primary fw-bolder" href="#submission"
+        <a class="btn btn-primary" href="#submission"
           >Submit Paper to SWC 2025</a
         >
       </div>
@@ -42,8 +42,9 @@ title: IEEE SWC 2025 Call for Papers
 <section
   class="page-section container-fluid px-5 pt-3 pb-5 mt-2 d-flex flex-column gap-3"
 >
-  <div class="alert alert-primary" role="alert">
-    Paper submission deadline has been extended to <b>May 1</b>
+  <div class="alert alert-success" role="alert">
+    Registration Opening Soon.
+    <a href="/registration/" class="alert-link">Learn more.</a>
   </div>
   <div class="row g-5">
     <div class="col-sm-4 d-flex flex-column gap-4">
@@ -57,9 +58,14 @@ title: IEEE SWC 2025 Call for Papers
             Full Paper Submission Deadline
           </h5>
           <h6 class="text-decoration-line-through">April 14, 2025</h6>
-          <h6 class="">{{site.data.swc_data.dates.paperSubmission}}</h6>
+          <h6 class="text-decoration-line-through">
+            {{site.data.swc_data.dates.paperSubmission}}
+          </h6>
           <hr class="w-100" />
-          <h5 class="fs-6 fw-bold text-center">Authors Notification</h5>
+          <h5 class="fs-6 fw-bold text-center">
+            Authors Notification (A delay of approximately one week caused by
+            the high volume of paper submissions.)
+          </h5>
           <h6 class="">{{site.data.swc_data.dates.authorsNotification}}</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Demo/Poster/WiP Paper Due</h5>
@@ -217,7 +223,7 @@ title: IEEE SWC 2025 Call for Papers
       class="d-flex flex-column gap-2 justify-content-start align-items-start"
     >
       <a
-        class="btn btn-primary fw-bolder"
+        class="btn btn-primary"
         target="_blank"
         href="https://edas.info/newPaper.php?c=33582"
         >Submit Paper to SWC 2025</a
