--- a/digitaltwin/index.html
+++ b/digitaltwin/index.html
@@ -27,7 +27,7 @@ title: IEEE Digital Twin 2025
         <h3 class="">August 18 - 22, 2025</h3>
       </div>
       <div>
-        <a class="btn btn-primary fw-bolder" href="#submission"
+        <a class="btn btn-primary" href="#submission"
           >Submit Paper to Digital Twin 2025</a
         >
       </div>
@@ -36,8 +36,12 @@ title: IEEE Digital Twin 2025
 </section>
 
 <section
-  class="page-section container-fluid px-5 py-5 mt-2 d-flex flex-column gap-4"
+  class="page-section container-fluid px-5 pt-3 pb-5 mt-2 d-flex flex-column gap-4"
 >
+  <div class="alert alert-success" role="alert">
+    Registration Opening Soon.
+    <a href="/registration/" class="alert-link">Learn more</a>
+  </div>
   <div class="row g-5">
     <div class="col-sm-4 d-flex flex-column gap-4">
       <div class="card bg-light-subtle">
@@ -48,10 +52,12 @@ title: IEEE Digital Twin 2025
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Paper Submission Deadline</h5>
           <h6 class="text-decoration-line-through">April 14, 2025</h6>
-          <h6>{{site.data.swc_data.dates.paperSubmission}}</h6>
+          <h6 class="text-decoration-line-through">
+            {{site.data.swc_data.dates.paperSubmission}}
+          </h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Workshop Papers Deadline</h5>
-          <h6 class="">February 15, 2025</h6>
+          <h6 class="text-decoration-line-through">February 15, 2025</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Authors Notification</h5>
           <h6 class="">May 31, 2025</h6>
@@ -358,7 +364,7 @@ title: IEEE Digital Twin 2025
             class="d-flex flex-column gap-2 justify-content-start align-items-start"
           >
             <a
-              class="btn btn-primary fw-bolder"
+              class="btn btn-primary"
               target="_blank"
               href="https://edas.info/N33584"
               >Submit Paper to Digital Twin 2025</a
