--- a/forums/women-in-the-smart-world/index.html
+++ b/forums/women-in-the-smart-world/index.html
@@ -30,7 +30,7 @@ title: Women in the Smart World Forum 2025
         <h3 class="">August 18 - 22, 2025</h3>
       </div>
       <div>
-        <a class="btn btn-primary fw-bolder" href="#submission-guidelines"
+        <a class="btn btn-primary" href="#submission-guidelines"
           >Submit Proposal to WSW Forum 2025
         </a>
       </div>
@@ -241,7 +241,7 @@ title: Women in the Smart World Forum 2025
           </p>
           <div>
             <a
-              class="btn btn-primary fw-bolder disabled"
+              class="btn btn-primary disabled"
               href="https://edas.info/N33584"
               target="_blank"
               >Submit Proposal to WSW Forum 2025 (Coming soon)</a
