--- a/index.html
+++ b/index.html
@@ -29,9 +29,12 @@ title: Home
         <h3>Calgary, Alberta, Canada</h3>
         <h3 class="">{{site.data.swc_data.dates.conferenceDates}}</h3>
       </div>
-      <div>
-        <a href="/cfp" class="btn btn-primary w-100"
-          >Call for Papers and Proposals</a
+      <div
+        class="d-flex flex-column flex-md-row gap-3 justify-content-center align-items-center w-100"
+      >
+        <a href="/cfp" class="btn btn-primary">Call for Papers and Proposals</a>
+        <a href="/registration" class="btn btn-success"
+          >Register for SWC 2025</a
         >
       </div>
     </div>
@@ -42,15 +45,16 @@ title: Home
   class="page-section container-fluid px-5 pt-3 pb-5 mt-2 d-flex flex-column gap-3"
 >
   <div>
-    <div class="alert alert-primary" role="alert">
-      Paper submission deadline has been extended to <b>May 1</b>
+    <div class="alert alert-success" role="alert">
+      Registration Opening Soon.
+      <a href="/registration/" class="alert-link">Learn more</a>
     </div>
-    <div class="alert alert-danger" role="alert">
+    <div class="alert alert-info" role="alert">
       Travel grants available for IEEE Computational Intelligence Society (CIS)
       members.
       <a href="/travel/ieee-cis-travel-grants" class="alert-link"
         >Learn more and apply</a
-      >.
+      >
     </div>
   </div>
   <div class="row">
@@ -88,9 +92,14 @@ title: Home
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Full Paper Submission</h5>
           <h6 class="text-decoration-line-through">April 14, 2025</h6>
-          <h6 class="">{{site.data.swc_data.dates.paperSubmission}}</h6>
+          <h6 class="text-decoration-line-through">
+            {{site.data.swc_data.dates.paperSubmission}}
+          </h6>
           <hr class="w-100" />
-          <h5 class="fs-6 fw-bold text-center">Authors Notification (A delay of approximately one week caused by the high volume of paper submissions.)</h5>
+          <h5 class="fs-6 fw-bold text-center">
+            Authors Notification (A delay of approximately one week caused by
+            the high volume of paper submissions.)
+          </h5>
           <h6 class="">{{site.data.swc_data.dates.authorsNotification}}</h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">Demo/Poster/WiP Paper Due</h5>
@@ -282,7 +291,7 @@ title: Home
         <p>Local Chair</p>
       </div>
 
-     <div class="col-md-4 col-sm-6">
+      <div class="col-md-4 col-sm-6">
         <img
           src="/assets/images/yuemin.jpg"
           alt="Dr.  "
@@ -293,11 +302,6 @@ title: Home
         <p>Track Chair</p>
       </div>
 
-
-
-
-      
-      
       <div class="col-md-4 col-sm-6">
         <img
           src="/assets/images/ashiq.jpg"
