--- a/program/index.html
+++ b/program/index.html
@@ -19,7 +19,7 @@ title: Program
     <div
       class="page-section container px-5 pt-5 d-flex flex-column align-items-center gap-3"
     >
-      <h1 class="display-3 fw-bolder mt-5">
+      <h1 class="display-5 fw-bolder mt-5">
         IEEE Smart World Congress 2025 <br />Program
       </h1>
     </div>
@@ -58,15 +58,15 @@ title: Program
             <div class="card bg-light-subtle">
               <div class="card-body">
                 <h5>Day 2</h5>
-                <h3>Industry Day and Reception </h3>
+                <h3>Industry Day and Reception</h3>
                 <p>
                   Join us for Industry Day, a full-day event highlighting
                   real-world applications and strategic innovations in smart
                   technologies across sectors. The program brings together
                   executives, industry leaders, and emerging voices to explore
                   how AI, IoT, digital twins, quantum computing, and AR/VR are
-                  shaping the future of smart communities.
-                  The reception will be held at dusk. All are welcome.
+                  shaping the future of smart communities. The reception will be
+                  held at dusk. All are welcome.
                 </p>
                 <a href="industry-day/" class="btn btn-primary mt-2"
                   >Learn More</a
@@ -84,7 +84,10 @@ title: Program
             <div class="card bg-light-subtle">
               <div class="card-body">
                 <h5>Day 3</h5>
-                <h3>Openning Ceremony, Keynote, Pannel, and Conference/Workshop/Special Session Paper Presentations</h3>
+                <h3>
+                  Openning Ceremony, Keynote, Pannel, and
+                  Conference/Workshop/Special Session Paper Presentations
+                </h3>
                 <p class="fs-5">Information Coming Soon</p>
               </div>
             </div>
@@ -99,8 +102,13 @@ title: Program
             <div class="card bg-light-subtle">
               <div class="card-body">
                 <h5>Day 4</h5>
-                <h3>Keynote, Pannel, and Conference/Workshop/Special Session Paper Presentations</h3>
-                <h3>Banquet and Award Announcement (evening, at Calgary Zoo)</h3>
+                <h3>
+                  Keynote, Pannel, and Conference/Workshop/Special Session Paper
+                  Presentations
+                </h3>
+                <h3>
+                  Banquet and Award Announcement (evening, at Calgary Zoo)
+                </h3>
                 <p class="fs-5">Information Coming Soon</p>
               </div>
             </div>
@@ -115,7 +123,10 @@ title: Program
             <div class="card bg-light-subtle">
               <div class="card-body">
                 <h5>Day 5</h5>
-                <h3>Keynote, Pannel, and Conference/Workshop/Special Session Paper Presentations</h3>
+                <h3>
+                  Keynote, Pannel, and Conference/Workshop/Special Session Paper
+                  Presentations
+                </h3>
                 <h3>Closing Ceremony</h3>
                 <p class="fs-5">Information Coming Soon</p>
               </div>
