--- a/registration/index.html
+++ b/registration/index.html
@@ -19,7 +19,7 @@ title: Registration
     <div
       class="page-section container px-5 pt-5 d-flex flex-column align-items-center gap-3"
     >
-      <h1 class="display-3 fw-bolder mt-5">
+      <h1 class="display-5 fw-bolder mt-5">
         IEEE Smart World Congress 2025 <br />Registration
       </h1>
     </div>
@@ -27,7 +27,7 @@ title: Registration
 </section>
 
 <section
-  class="page-section container-fluid px-5 pt-5 pb-5 mt-2 d-flex flex-column gap-4"
+  class="page-section container-fluid px-5 pt-5 pb-5 mt-2 d-flex flex-column gap-4 text-center"
 >
   <div class="d-flex flex-column gap-4">
     <div class="row">
