--- a/travel/visa-information/index.html
+++ b/travel/visa-information/index.html
@@ -28,7 +28,7 @@ title: Visa Information
 </section>
 
 <section
-  class="page-section container-fluid px-5 pb-5 d-flex flex-column gap-2"
+  class="page-section container-fluid px-5 pb-5 d-flex flex-column gap-2 text-center"
 >
   <div class="row g-5">
     <div class="col-sm-12 d-flex flex-column gap-4">
