--- a/workshops/fusion/index.html
+++ b/workshops/fusion/index.html
@@ -24,7 +24,7 @@ title: FUSION Workshop 2025
         Technologies & Applications (FUSION) 2025
       </h1>
       <div>
-        <a class="btn btn-primary fw-bolder" href="#submission-guidelines"
+        <a class="btn btn-primary" href="#submission-guidelines"
           >Submit Paper to Workshop</a
         >
       </div>
@@ -168,7 +168,7 @@ title: FUSION Workshop 2025
             class="d-flex flex-column gap-2 justify-content-start align-items-start"
           >
             <a
-              class="btn btn-primary fw-bolder"
+              class="btn btn-primary"
               href="https://edas.info/newPaper.php?c=33582&track=131131"
               target="_blank"
               >Submit Paper to Workshop</a
