--- a/workshops/iaiddt/index.html
+++ b/workshops/iaiddt/index.html
@@ -24,7 +24,7 @@ title: IAIDDT Workshop 2025
         2025)
       </h1>
       <div>
-        <a class="btn btn-primary fw-bolder" href="#submission-guidelines"
+        <a class="btn btn-primary" href="#submission-guidelines"
           >Submit Paper to Workshop</a
         >
       </div>
@@ -280,7 +280,7 @@ title: IAIDDT Workshop 2025
             class="d-flex flex-column gap-2 justify-content-start align-items-start"
           >
             <a
-              class="btn btn-primary fw-bolder"
+              class="btn btn-primary"
               href="https://edas.info/newPaper.php?c=33582&track=131569"
               target="_blank"
               >Submit Paper to Workshop</a
