fixing dates and alert

--- a/cfp/index.html
+++ b/cfp/index.html
@@ -44,7 +44,7 @@ title: IEEE SWC 2025 Call for Papers
 >
   <div class="alert alert-success" role="alert">
     Registration Opening Soon.
-    <a href="/registration/" class="alert-link">Learn more.</a>
+    <a href="/registration/" class="alert-link">Learn more</a>
   </div>
   <div class="row g-5">
     <div class="col-sm-4 d-flex flex-column gap-4">
