--- a/index.html
+++ b/index.html
@@ -111,14 +111,14 @@ title: Home
           <h5 class="fs-6 fw-bold text-center">
             Tutorial / Workshop / Special Session Proposal
           </h5>
-          <h6 class="">
+          <h6 class="text-decoration-line-through">
             {{site.data.swc_data.dates.tutorialWorkshopSpecialSessionDue}}
           </h6>
           <hr class="w-100" />
           <h5 class="fs-6 fw-bold text-center">
             Tutorial / Workshop / Special Session Acceptance
           </h5>
-          <h6 class="">
+          <h6 class="text-decoration-line-through">
             {{site.data.swc_data.dates.tutorialWorkshopSpecialSessionAcceptance}}
           </h6>
           <hr class="w-100" />
