Added Dr. Bernard's bio

--- a/tutorials/the-practice-of-using-language-models/index.html
+++ b/tutorials/the-practice-of-using-language-models/index.html
@@ -66,14 +66,14 @@ title: Tutorials - The Practice of Using Language Models
         </p>
       </div>
     </div>
-    <!-- <hr />
+    <hr />
     <div class="row">
       <div
         class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
       >
         <div class="text-center">
           <img
-            src="/assets/images/Jason Bernard.jpg"
+            src="/assets/images/jason_bernard.jpg"
             alt="Dr. Jason Bernard"
             class="circle-img mb-3"
           />
@@ -87,10 +87,17 @@ title: Tutorials - The Practice of Using Language Models
       <div class="col-md-9 col-sm-8">
         <h3>Biography</h3>
         <p>
-          
+          Dr. Jason Bernard is an Assistant Professor of Computer Science at
+          Athabasca University. He holds a PhD from the University of
+          Saskatchewan and has completed postdoctoral research at McMaster and
+          Athabasca University. His work focuses on grammatical inference and
+          educational technology, including a breakthrough on a longstanding
+          open problem in grammar learning. Prior to academia, he served in the
+          Canadian Armed Forces and spent a decade in software development,
+          pioneering the use of AI for internet routing and lead generation.
         </p>
       </div>
-    </div> -->
+    </div>
   </div>
 </section>
 
