Kevin So TPC added to SEGA 2025

--- a/workshops/sega/index.html
+++ b/workshops/sega/index.html
@@ -255,6 +255,9 @@ title: SEGA Workshop 2025
                 Angela Siegel<br />Dalhousie University, Canada<br />
               </h5>
               <h5 class="fs-6">
+                Kevin So<br />The Hong Kong Polytechnic University, Hong Kong<br />
+              </h5>
+              <h5 class="fs-6">
                 Qing Tan<br />Athabasca University, Canada<br />
               </h5>
               <h5 class="fs-6">
