--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ title: Home
           class="circle-img mb-3"
         />
         <h5>Dr. Saher Javaid</h5>
-        <h6><i>The University of Calgary, Canada</i></h6>
+        <h6><i>Japan Advanced Institute of Science and Technology, Japan</i></h6>
         <p>Women in Engineering Chair</p>
       </div>
       <div class="col-md-4 col-sm-6">
